--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,8 +100,8 @@ jobs:
         pwd
         ls -alh
         echo "`date`: Installing YAML::Syck, needed for Koha 20.11 and earlier"
-        docker exec koha-koha-1 apt-get install -y libyaml-syck-perl libemail-valid-perl libmojo-jwt-perl
-        while [ $? -ne 0 ]; do echo "INSTALL YAML::Syck" && docker exec koha-koha-1 apt-get install -y libyaml-syck-perl libemail-valid-perl; done
+        docker exec koha-koha-1 apt-get install -y libemail-valid-perl libmojo-jwt-perl
+        while [ $? -ne 0 ]; do echo "INSTALL YAML::Syck" && docker exec koha-koha-1 apt-get install -y libemail-valid-perl; done
         echo "SLEEPING 3 MINUTES"
         sleep 60
         echo "1 MINUTE DONE"
@@ -170,7 +170,7 @@ jobs:
         release-version: ${{ steps.myvars.outputs.tag_version }}
         release-name: ${{ steps.myvars.outputs.github_repo }}
         minimum-version: ${{ steps.koha-version-oldstable.outputs.version-major-minor }}
-        plugin-module: "Koha/Plugin/Com/ByWaterSolutions/PatronOverdueNotices.pm"
+        plugin-module: "Koha/Plugin/Com/ByWaterSolutions/PeopleSoftConverter.pm"
 
     - name: See if kpz was created
       run: |
